entry/.preview/intermediates/res/debug/rich/assets/js/default/compile_error.log
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /Users/manju/DevEcoStudioProjects/SmartBikeDesign/entry/src/main/js/default/pages/index/index.js: Unexpected token, expected "," (24:8)

  22 |         music_cover:""
  23 | 
> 24 |         Front30PSI:"Front 30 PSI",
     |         ^
  25 |         Rear32PSI:"Rear 32 PSI",
  26 |         E:"E",
  27 |         R:"R",
    at Parser._raise (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:742:17)
    at Parser.raiseWithData (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:735:17)
    at Parser.raise (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:729:17)
    at Parser.unexpected (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:8779:16)
    at Parser.expect (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:8765:28)
    at Parser.parseObj (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10387:14)
    at Parser.parseExprAtom (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10017:28)
    at Parser.parseExprSubscripts (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9624:23)
    at Parser.parseMaybeUnary (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9604:21)
    at Parser.parseExprOps (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9474:23)
    at Parser.parseMaybeConditional (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9447:23)
    at Parser.parseMaybeAssign (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9402:21)
    at Parser.parseObjectProperty (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10534:101)
    at Parser.parseObjPropValue (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10559:101)
    at Parser.parseObjectMember (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10483:10)
    at Parser.parseObj (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10396:25)
    at Parser.parseExprAtom (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:10017:28)
    at Parser.parseExprSubscripts (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9624:23)
    at Parser.parseMaybeUnary (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9604:21)
    at Parser.parseExprOps (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9474:23)
    at Parser.parseMaybeConditional (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9447:23)
    at Parser.parseMaybeAssign (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:9402:21)
    at Parser.parseExportDefaultExpression (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:12306:24)
    at Parser.parseExport (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:12208:31)
    at Parser.parseStatementContent (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:11208:27)
    at Parser.parseStatement (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:11104:17)
    at Parser.parseBlockOrModuleBlockBody (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:11679:25)
    at Parser.parseBlockBody (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:11665:10)
    at Parser.parseTopLevel (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:11035:10)
    at Parser.parse (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:12671:10)
    at parse (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/parser/lib/index.js:12722:38)
    at parser (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/core/lib/parser/index.js:54:34)
    at parser.next (<anonymous>)
    at normalizeFile (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/core/lib/transformation/normalize-file.js:93:38)
    at normalizeFile.next (<anonymous>)
    at run (/Users/manju/Huawei/SDK6/SDK-offline-2.2.0.3-mac 2/js/2.2.0.3/build-tools/ace-loader/node_modules/@babel/core/lib/transformation/index.js:31:50)